# slime

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.redmod  docker-bake.hcl  megatron_test.py  pyproject.toml  requirements.txt  testing.ipynb  testing.md  train.py
docs/en/examples/: qwen3-30B-A3B.md
docs/en/get_started/: quick_start.md
scripts/: run-baobab-veomni.sh  run-mangrove-veomni.sh  run-qwen3-14B-veomni.sh  run-qwen3-30A3B-veomni.sh  run-qwen3-30B-A3B.sh  run-qwen3-4B-veomni.sh  run-qwen3-4B.sh
slime/backends/fsdp_utils/: __init__.py  actor.py  arguments.py  fsdp_version_utils.py  update_weight_utils.py
slime/backends/megatron_utils/: actor.py  cp_utils.py  data.py  model.py  model_provider.py
slime/backends/veomni_utils/: __init__.py  actor.py  arguments.py  update_weight_utils.py
slime/ray/: actor_group.py  rollout.py  rollout_data_source.py
slime/tests/: test_fsdp.sh  test_megatron.sh  test_veomni.sh
slime/tests/single/: test_megatron_1.sh  test_veomni_1.sh
slime/utils/: __init__.py  arguments.py  arguments_type.py  data.py  logging.py  memory_utils.py
test/: debug_rollout_data_1  debug_rollout_data_256_baobab
